--- a/kobuki_driver/CMakeLists.txt
+++ b/kobuki_driver/CMakeLists.txt
@@ -47,6 +47,7 @@ ament_export_dependencies(
     ecl_sigslots
     ecl_time
 )
+ament_export_include_directories(include)
 # TODO: deprecate this line post 'ardent' (been fixed upstream)
 ament_export_libraries(${PROJECT_NAME})
 ament_package()
